--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <!-- List View Text Content -->
     <string name="list_name">Firstname Lastname</string>
     <string name="list_phone">(808)982-7742</string>
+    <string name="name">Name:</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
