--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,11 @@
     <string name="list_name">Firstname Lastname</string>
     <string name="list_phone">(808)982-7742</string>
     <string name="name">Name:</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="company">Company:</string>
+    <string name="phone">Phone:</string>
+    <string name="address">Address:</string>
+    <string name="email">Email:</string>
+    <string name="bacon">Bacon Ipsom</string>
+    <string name="bacon_mail">Bacon@bacon.com</string>
+    <string name="a555">555-555-5555</string>
 </resources>
